# gpuocelot

./: .dockerignore  .gitmodules  Dockerfile  README.md  build.py
ocelot/: CMakeLists.txt  Dockerfile  SConscript
ocelot/cmake/: FindLLVM.cmake
ocelot/docker/: Dockerfile  llvm-3.7.patch
ocelot/include/cuda/: CudaDriverFrontend.h  CudaRuntime.h  CudaWorkerThread.h  cuda_runtime.h
ocelot/include/executive/: EmulatorDevice.h  LLVMModuleManager.h  RemoteDevice.h
ocelot/include/ocelot/analysis/: AffineAnalysis.h  AnalysisFactory.h  BranchInfo.h  ControlDependenceAnalysis.h  ControlTree.h  ConvergentRegionAnalysis.h  CycleAnalysis.h  DataDependenceAnalysis.h  DataflowGraph.h  DefaultProgramStructure.h  DependenceAnalysis.h  DivergenceAnalysis.h  DivergenceGraph.h  DominatorTree.h  HammockGraphAnalysis.h  LoopAnalysis.h  MemoryDependenceAnalysis.h  PostdominatorTree.h  ProgramStructureGraph.h  SSAGraph.h  SafeRegionAnalysis.h  SimpleAliasAnalysis.h  StructuralAnalysis.h  SuperblockAnalysis.h  ThreadFrontierAnalysis.h
ocelot/include/ocelot/api/: OcelotRuntime.h  ocelot.h
ocelot/include/ocelot/cal/: CalDriver.h
ocelot/include/ocelot/cuda/: CudaDriver.h  CudaDriverFrontend.h  CudaDriverInterface.h  CudaRuntime.h  CudaRuntimeContext.h  CudaRuntimeInterface.h  CudaWorkerThread.h  FatBinaryContext.h  FatBinaryPTXLoader.h  TraceGeneratingCudaRuntime.h  cudaFatBinary.h  cuda_runtime.h
ocelot/include/ocelot/executive/: ATIGPUDevice.h  CTAContext.h  CooperativeThreadArray.h  Device.h  EmulatedKernel.h  EmulatedKernelScheduler.h  EmulatorCallStack.h  EmulatorDevice.h  ExecutableKernel.h  ExternalKernel.h  LLVMModuleManager.h  LLVMState.h  LLVMWorkerThread.h  MulticoreCPUDevice.h  NVIDIAExecutableKernel.h  NVIDIAGPUDevice.h  PassThroughDevice.h  RemoteDevice.h  RuntimeException.h  TextureOperations.h
ocelot/include/ocelot/ir/: ExternalFunctionSet.h  Global.h  ILKernel.h  ILOperand.h  Instruction.h  LLVMInstruction.h  LLVMKernel.h  LLVMStatement.h  Module.h  PTXInstruction.h  PTXKernel.h  PTXOperand.h  PTXStatement.h  Parameter.h  Texture.h
ocelot/include/ocelot/parser/: PTXParser.h  Parser.h
ocelot/include/ocelot/trace/: InteractiveDebugger.h  (+4 more)
ocelot/include/trace/: KernelTimer.h
ocelot/include/translator/: Translator.h
ocelot/include/util/: ExtractedDeviceState.h
ocelot/ocelot/tools/: KernelTestHarness.cpp  OcelotConfig.cpp  OcelotLinker.cpp
ocelot/scripts/: build_environment.py  create_config.py
ocelot/src/analysis/: AffineAnalysis.cpp  Analysis.cpp  AnalysisFactory.cpp  BranchInfo.cpp  ControlDependenceAnalysis.cpp  ControlTree.cpp  ConvergentRegionAnalysis.cpp  CycleAnalysis.cpp  DataDependenceAnalysis.cpp  DataflowGraph.cpp  DependenceAnalysis.cpp  DirectionalGraph.cpp  DivergenceAnalysis.cpp  DivergenceGraph.cpp  DominatorTree.cpp  HammockGraphAnalysis.cpp  LoopAnalysis.cpp  MemoryDependenceAnalysis.cpp  PTXInstructionDependenceGraph.cpp  PostdominatorTree.cpp  ProgramStructureGraph.cpp  SSAGraph.cpp  SafeRegionAnalysis.cpp  SimpleAliasAnalysis.cpp  SparseAnalysis.cpp  StructuralAnalysis.cpp  SuperblockAnalysis.cpp  ThreadFrontierAnalysis.cpp
ocelot/src/api/: OcelotConfiguration.cpp  OcelotRuntime.cpp  ocelot.cpp
ocelot/src/cal/: CalDriver.cpp
ocelot/src/cuda/: CudaDriver.cpp  CudaDriverApi.cpp  CudaDriverFrontend.cpp  CudaDriverInterface.cpp  CudaRuntime.cpp  CudaRuntimeInterface.cpp  CudaWorkerThread.cpp  FatBinaryContext.cpp  FatBinaryPTXLoader.cpp  cuda_runtime.cpp
ocelot/src/executive/: ATIExecutableKernel.cpp  ATIGPUDevice.cpp  CTAContext.cpp  CooperativeThreadArray.cpp  Device.cpp  EmulatedKernel.cpp  EmulatedKernelScheduler.cpp  EmulatorCallStack.cpp  EmulatorDevice.cpp  ExecutableKernel.cpp  FrameInfo.cpp  LLVMContext.cpp  LLVMCooperativeThreadArray.cpp  LLVMExecutableKernel.cpp  LLVMExecutionManager.cpp  LLVMFunctionCallStack.cpp  LLVMModuleManager.cpp  LLVMRuntimeLibrary.inl  LLVMState.cpp  LLVMWorkerThread.cpp  MulticoreCPUDevice.cpp  NVIDIAExecutableKernel.cpp  NVIDIAGPUDevice.cpp  PassThroughDevice.cpp  ReconvergenceMechanism.cpp  RemoteDevice.cpp  RuntimeException.cpp  TextureOperations.cpp
ocelot/src/ir/: ControlFlowGraph.cpp  Dim3.cpp  ExternalFunctionSet.cpp  Global.cpp  ILInstruction.cpp  ILKernel.cpp  ILOperand.cpp  ILStatement.cpp  IRKernel.cpp  Kernel.cpp  LLVMInstruction.cpp  LLVMKernel.cpp  LLVMModuleManager.cpp  LLVMState.cpp  Local.cpp  Module.cpp  PTXInstruction.cpp  PTXKernel.cpp  PTXOperand.cpp  PTXStatement.cpp  Parameter.cpp  Texture.cpp
ocelot/src/parser/: PTXLexer.cpp  PTXParser.cpp  ptx.ll  ptxgrammar.yy
ocelot/src/tools/: KernelExtractor.cpp  KernelExtractor.h  KernelTestHarness.cpp  KernelTestHarness.h  LoadPtx.cpp  OcelotConfig.cpp  OcelotLinker.cpp  OcelotServer.cpp  OcelotServer.h  PTXOptimizer.cpp
ocelot/src/trace/: InteractiveDebugger.cpp  KernelTimer.cpp  MemoryChecker.cpp  MemoryRaceDetector.cpp  TraceEvent.cpp  TraceGenerator.cpp
ocelot/src/transforms/: AddLocationMetadata.cpp  AffineLinearScan.cpp  AffineRegister.cpp  AssignFallThroughEdge.cpp  CoalescedRegister.cpp  ConstantPropagationPass.cpp  ConvertPredicationToSelectPass.cpp  DeadCodeEliminationPass.cpp  DefaultLayoutPass.cpp  DivergenceLinearScan.cpp  DivergenceRegister.cpp  EnforceLockStepExecutionPass.cpp  FunctionInliningPass.cpp  GlobalValueNumberingPass.cpp  HoistParameterLoadsPass.cpp  HoistSpecialValueDefinitionsPass.cpp  IPDOMReconvergencePass.cpp  LinearScanRegisterAllocationPass.cpp  LoopUnrollingPass.cpp  MIMDThreadSchedulingPass.cpp  MemoryArray.cpp  ModuleLinkerPass.cpp  MoveEliminationPass.cpp  Pass.cpp  PassFactory.cpp  PassManager.cpp  PriorityLayoutPass.cpp  ReadableLayoutPass.cpp  RemoveBarrierPass.cpp  SharedPtrAttribute.cpp  SimplifyControlFlowGraphPass.cpp  SimplifyExternalCallsPass.cpp  SpillPolicy.cpp  SplitBasicBlockPass.cpp  StructuralTransform.cpp  SubkernelFormationPass.cpp  SyncEliminationPass.cpp  ThreadFrontierReconvergencePass.cpp
ocelot/src/translator/: PTXToILTranslator.cpp  PTXToLLVMTranslator.cpp  Translator.cpp
ocelot/src/util/: ExtractedDeviceState.cpp  OcelotServerConnection.cpp  RemoteDeviceMessage.cpp
(+241 files in other folders)
